--- a/frontend/argentbank/src/pages/profile/profile.css
+++ b/frontend/argentbank/src/pages/profile/profile.css
@@ -1,66 +1,11 @@
-
-.account {
+.flex {
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
-    border: 1px solid black;
-    background-color: #fff;
-    width: 80%;
-    margin: 0 auto;
-    flex-direction: column;
-    padding: 1.5rem;
-    box-sizing: border-box;
-    text-align: left;
-    margin-bottom: 2rem;
+    margin: 20px;
 }
 
-.account-amount {
-    margin: 0;
-    font-size: 2.5rem;
-    font-weight: bold;
+.flex input {
+ margin-right: 10px;
 }
 
-.account-amount-description {
-    margin: 0;
-}
-
-.account-title {
-    margin: 0;
-    padding: 0;
-    font-size: 1rem;
-    font-weight: normal;
-}
-
-.account-content-wrapper {
-    width: 100%;
-    flex: 1;
-}
-
-.edit-button {
-    border-color: #00bc77;
-    background-color: #00bc77;
-    color: #fff;
-    font-weight: bold;
-    padding: 10px;
-}
-
-.header {
-    color: #fff;
-    margin-bottom: 2rem;
-}
-
-.hide {
-    display: none;
-}
-
-.transaction-button {
-    display: block;
-    width: 100%;
-    padding: 8px;
-    font-size: 1.1rem;
-    font-weight: bold;
-    margin-top: 1rem;
-    border-color: #00bc77;
-    background-color: #00bc77;
-    color: #fff;
-}
