--- a/frontend/argentbank/src/pages/signin/signin.css
+++ b/frontend/argentbank/src/pages/signin/signin.css
@@ -42,3 +42,12 @@
 .input-wrapper label {
     font-weight: bold;
 }
+
+
+
+@media (max-width: 768px) {
+    .sign-in-content {
+        width: 100%;
+        padding: 1.5rem;
+    }
+}
